--- a/rogue_tattoo/Gemfile
+++ b/rogue_tattoo/Gemfile
@@ -5,6 +5,8 @@ gem 'rails', '4.0.2'
 
 gem 'bootstrap-sass'
 
+gem 'paperclip'
+
 # Use sqlite3 as the database for Active Record
 group :production do
   gem 'pg'
