--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,4 @@ config/secrets.yml
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+.rvmrctmp
