Database and Apache setup for production

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,8 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: d9929necps59or
-  username: fwkjxorfdmlcml
-  password: yJXdZ_cfuATw4qgwOtmbQLwCv0
-  host: ec2-184-72-238-68.compute-1.amazonaws.com
+  database: roguetattoo
+  username: rails
+  password: railspassword
+  host: localhost
   port: 5432
