Fixed RSPEC for yml file

--- a/config/environment_variables.yml
+++ b/config/environment_variables.yml
@@ -2,3 +2,5 @@ development:
   S3_BUCKET_NAME_TATTOO: rogue-tattoo
 production:
   S3_BUCKET_NAME_TATTOO: rogue-tattoo
+test:
+  S3_BUCKET_NAME_TATTOO: rogue-tattoo
