--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -14,4 +14,17 @@
     RailsEnv production
     RailsBaseURI /rogue-tattoo
     ServerName dev.rogue-tattoo.com
+    
+    ### If not already activated, activates the RewriteEngine module
+    RewriteEngine On
+
+    ### If using a .htaccess file, uncomment the following line
+    ###Options +FollowSymLinks
+
+    ### If the Host header is not correctly set
+    ###RequestHeader set Host "api.seo4ajax.com"
+                  
+    ### If a bot requests an escaped URL then proxify the request to SEO4Ajax
+    RewriteCond %{QUERY_STRING}  _escaped_fragment_=  [NC]
+    RewriteRule ^(.*)$ http://api.seo4ajax.com/bd602afaebb4b66511cd951cde449a11/$1 [P,QSA,L]
 </VirtualHost>
