--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -19,10 +19,10 @@
     RewriteEngine On
 
     ### If using a .htaccess file, uncomment the following line
-    ###Options +FollowSymLinks
+    Options +FollowSymLinks
 
     ### If the Host header is not correctly set
-    ###RequestHeader set Host "api.seo4ajax.com"
+    RequestHeader set Host "api.seo4ajax.com"
                   
     ### If a bot requests an escaped URL then proxify the request to SEO4Ajax
     RewriteCond %{QUERY_STRING}  _escaped_fragment_=  [NC]
