--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -10,7 +10,7 @@
                   
     ### If a bot requests an escaped URL then proxify the request to SEO4Ajax
     RewriteCond %{QUERY_STRING}  _escaped_fragment_=  [NC]
-    RewriteRle http://www.rubywebs.net
+    RewriteRule http://www.rubywebs.net
     ###RewriteRule ^(.*)$ http://api.seo4ajax.com/bd602afaebb4b66511cd951cde449a11/$1 [P,QSA,L]
     
     PassengerEnabled on
