--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -11,7 +11,7 @@
     ### If a bot requests an escaped URL then proxify the request to SEO4Ajax
     RewriteCond %{QUERY_STRING}  _escaped_fragment_=  [NC]
     ###RewriteRule http://www.rubywebs.net
-    RewriteRule ^(.*)$ http://www.rubywebs.net ###http://api.seo4ajax.com/bd602afaebb4b66511cd951cde449a11/$1 [P,QSA,L]
+    RewriteRule ^(.*)$ http://api.seo4ajax.com/bd602afaebb4b66511cd951cde449a11/$1 [P,QSA,L]
     
     PassengerEnabled on
     DocumentRoot /opt/bitnami/projects/rogue-tattoo/public
