--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -13,7 +13,7 @@
     </Directory>
     RailsEnv production
     RailsBaseURI /rogue-tattoo
-    ServerName dev.rogue-tattoo.com
-    
-
+    ServerName www.rogue-tattoo.com
+    ServerAlias rogue-tattoo.com
+    ServerAlias *.rogue-tattoo.com
 </VirtualHost>
