--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ config/secrets.yml
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrctmp
 tmp
+
+# Ignore application configuration
+/config/application.yml
