--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -12,7 +12,7 @@
         </IfVersion>
     </Directory>
     RailsEnv production
-    RailsBaseURI /rogue-tattoo
+    RailsBaseURI /rogue_tattoo
     ServerName www.rogue-tattoo.com
     ServerAlias rogue-tattoo.com
     ServerAlias *.rogue-tattoo.com
